[gd_scene load_steps=4 format=3 uid="uid://d0v7uoks3p5tc"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_0nxbk"]
[ext_resource type="FontFile" uid="uid://cxu340id4pcji" path="res://assets/font/ubuntu/ubuntu-font-family-0.80/UbuntuMono-R.ttf" id="2_dhcox"]
[ext_resource type="Theme" uid="uid://ch4tg36s8xwpd" path="res://themes/button_text.tres" id="2_ff1i5"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nxbk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ff1i5")
theme_override_fonts/font = ExtResource("2_dhcox")
theme_override_font_sizes/font_size = 26
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ff1i5")
theme_override_fonts/font = ExtResource("2_dhcox")
theme_override_font_sizes/font_size = 26
text = "Options"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
